style: fix track title/artist text clipping

--- a/app/views/components/track/track.styl
+++ b/app/views/components/track/track.styl
@@ -54,12 +54,10 @@ $accentColorLight = lighten($accentColor, 92%)
     flex 1 0 35%
     min-width 0px
   .track__title
-    overflow hidden
     text-overflow ellipsis
     white-space nowrap
     line-height 20px
   .track__artist
-    overflow hidden
     white-space nowrap
     text-overflow ellipsis
     flex 1 0 15%
